--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -20,7 +20,7 @@
 <header class="fill">
     <nav>
         <a href="/">
-            <h5>Mjølner</h5>
+            <h5>Mjølner!</h5>
         </a>
 
         <div class="max"></div>
